--- a/index.html
+++ b/index.html
@@ -3,18 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Pages Site</title>
+    <title>Abisha G - DevOps Engineer</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>Abisha G</h1>
+        <p>DevOps Engineer</p>
+    </header>
 
-<header>Welcome to My Website</header>
+    <nav>
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#contact">Contact</a>
+    </nav>
 
-<main>
-    <p>This is a simple static website hosted on GitHub Pages.</p>
-    <button id="clickMe">Click Me!</button>
-</main>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Hello! I'm Abisha, a passionate DevOps Engineer with a focus on automation, cloud technologies, and continuous integration/deployment. I enjoy building scalable solutions and ensuring smooth development workflows.</p>
+    </section>
 
-<script src="script.js"></script>
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>AWS Cloud & Services</li>
+            <li>Docker & Kubernetes</li>
+            <li>CI/CD Pipelines</li>
+            <li>Terraform</li>
+            <li>Linux & Shell Scripting</li>
+            <li>Git & GitHub</li>
+        </ul>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:abijoshi86@gmail.com">abijoshi86@gmail.com</a></p>
+    </section>
+
+    <footer>
+        <p>© 2025 Abisha G - DevOps Engineer</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
